<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    >

    <ImageView
        android:id="@+id/medicineImgView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/medicine_image"
        android:src="@drawable/logo"
        android:background="@drawable/circle_image_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:barrierMargin="10dp"
        app:constraint_referenced_ids="medicineImgView"
        />

    <TextView
        android:id="@+id/medicineNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/medicine_name"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/ingredientTextView"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/medicineTypeTextView"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/ingredientTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/main_ingredient"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"

        android:ellipsize="end"
        app:layout_constraintBottom_toTopOf="@+id/effectTextView"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/medicineTypeTextView"
        app:layout_constraintTop_toBottomOf="@id/medicineNameTextView"
        />

    <TextView
        android:id="@+id/effectTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/main_effect"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/manufacturerTextView"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/ingredientTextView"
        />

    <TextView
        android:id="@+id/manufacturerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/effectTextView"
        />

    <com.google.android.material.chip.Chip
        android:id="@+id/medicineTypeTextView"
        style="@style/Widget.Material3.Chip.Assist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_type"
        app:chipCornerRadius="16dp"
        app:chipEndPadding="0dp"
        app:chipStartPadding="0dp"

        android:textColor="@color/medicine_type_chip_stroke_color"
        android:textSize="12sp"
        app:chipStrokeColor="@color/medicine_type_chip_stroke_color"
        android:clickable="false"
        app:layout_constraintLeft_toRightOf="@id/medicineNameTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>